# chomp-test-inspector

./: COPYING  chomp-test-inspector.cabal  compile-development.sh  compile-production.sh  fetch-js-libs.sh  fetch-supersimple-editor.sh
client/: message.js
client/src/: core.js  editor.caret.js  editor.dom.js  editor.events.js  editor.handler.js  editor.highlight.js  editor.ot.client.js  editor.ot.operation.js  editor.text.js  events.init.js  footer.js  header.js  langlang.highlight.js  langlang.parse.js  log.handler.js  message.js  message.service.js  state.js  statusbar.handler.js  statusbar.message.js  websocket-service.js  websocket.service.js
client/style/: animations.css  effect.css  langlang.highlight.cassius  main.cassius
src/: Client.hs  FileObserver.hs  FileStore.hs  IOUtil.hs  Main.hs  Message.hs  MessageDispatch.hs  OTServer.hs  ServerState.hs  TestInspectorPage.hs  WebApp.hs  WebsocketApp.hs
src/Handler/: ClientHandler.hs  ServerHandler.hs  StorageHandler.hs
src/Observer/: DirectoryWatch.hs  ExecutableWatch.hs  FileLoader.hs  FileWatch.hs  StorageObserver.hs  WatchDirectory.hs  WatchExecutable.hs  WatchFile.hs
src/STM/: Clients.hs  FileStore.hs  Messages.hs
static/ot/: ot.js
static/supersimple/: supersimple-editor.js
tests/: fundamentals.source  test00.source  test01.source
