name: chomp-test-inspector
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any, blaze-html -any, bytestring -any,
               case-insensitive -any, enumerator -any, hamlet -any, hinotify -any,
               http-types -any, mtl -any, shakespeare -any, shakespeare-text -any,
               text -any, wai -any, wai-app-static -any, wai-websockets -any,
               warp -any, websockets -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Reactive testing for the chomp compiler/interpreter
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: chomp-test-inspector
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: FileStore WebsocketApp WebApp
               TestInspectorPage
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
