name:              chomp-test-inspector
version:           0.0.1
license:           PublicDomain
license-file:      COPYING
author:            Rehno Lindeque
maintainer:        Rehno Lindeque
synopsis:          Reactive testing for chomp
description:       Chomp chomp chomp...
category:          Web
stability:         Experimental
cabal-version:     >= 1.2
build-type:        Simple
homepage:          https://github.com/langlang

Flag production
  Description:   Build the production executable.
  Default:       False

executable chomp-test-inspector
  if flag(production)
    cpp-options:   -DPRODUCTION
    ghc-options:   -Wall -threaded
  else
    cpp-options:
    ghc-options:   -Wall -threaded -O0

  main-is: Main.hs
  buildable: True
  build-tools:
  cc-options:
  ld-options:
  pkgconfig-depends:
  frameworks:
  c-sources:
  default-language:
  other-languages:
  default-extensions:
  other-extensions:
  extensions:
  extra-libraries:
  extra-lib-dirs:
  includes:
  install-includes:
  include-dirs:
  hs-source-dirs: src
  other-modules: WebsocketApp FileStore Message WebApp
                 TestInspectorPage STM.FileStore STM.Messages
  ghc-prof-options:
  ghc-shared-options:
  hugs-options:
  nhc98-options:
  jhc-options:
  build-depends: MissingH -any, base -any, blaze-html -any,
                 bytestring -any, case-insensitive -any, containers -any,
                 directory -any, enumerator -any, hamlet -any, hinotify -any,
                 http-types -any, mtl -any, safe -any, shakespeare -any,
                 shakespeare-js -any, stm -any, stm-tlist -any, text -any,
                 wai -any, wai-app-static -any, wai-websockets -any, warp -any,
                 websockets -any

